--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.0",
+    "apollo-server-express": "^3.12.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.6.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.22",
     "pug": "^3.0.2"
   }
 }
