--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.1",
     "@graphql-tools/schema": "^10.0.0",
     "apollo-server-express": "^3.12.0",
     "cookie-parser": "~1.4.4",
