--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.0.2",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/platform-server": "^16.0.0",
