--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@graphql-tools/schema": "^10.0.0",
     "apollo-server-express": "^3.12.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
