--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
             ],
             "scripts": []
           },
@@ -150,3 +150,4 @@
     }
   }
 }
+
