--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@apollo/client": "^3.0.0",
     "@nguniversal/express-engine": "^16.0.2",
+    "angular-calendar": "^0.31.0",
     "apollo-angular": "^5.0.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "express": "^4.15.2",
+    "graphql": "^16",
     "pg": "^8.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.1",
