--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "http-errors": "~1.6.3",
