--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.15.2",
     "graphql": "^16",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "pg": "^8.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
